--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Курс/Конвертер валют*
+          span.badge.badge-success Курс/Конвертер валют
         ul
           li
             div.icon.finance.i.ua
@@ -26,7 +26,7 @@ block content
             a(href='https://minfin.com.ua/currency/', target='_blank') minfin.com.ua
       .group
         .group-title
-          span.badge.badge-success *Обмен валют*
+          span.badge.badge-success Обмен валют
         ul
           li
             div.icon.bestchange.ru
@@ -42,7 +42,7 @@ block content
             a(href='https://www.bitfinex.com/?locale=ru', target='_blank') bitfinex.com
       .group
         .group-title
-          span.badge.badge-success *Рейтинг банков Украины*
+          span.badge.badge-success Рейтинг банков Украины
         ul
           li
             div.icon.minfin.com.ua
@@ -56,7 +56,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Банк/Банк ОНЛАЙН*
+          span.badge.badge-success Банк/Банк ОНЛАЙН
         ul
           li
             div.icon.privatbank.ua
@@ -95,7 +95,7 @@ block content
             span.opisi Онлайн
       .group
         .group-title
-          span.badge.badge-success *Страхование/Кредит/Финансы*
+          span.badge.badge-success Страхование/Кредит/Финансы
         ul
           li
             div.icon.alfabank.ua
@@ -115,7 +115,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Интернет КОШЕЛЕК*
+          span.badge.badge-success Интернет КОШЕЛЕК
         ul
           li
             div.icon.payoneer.com
