--- a/includes/city.pug
+++ b/includes/city.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Новомиргород*
+          span.badge.badge-success Новомиргород
         ul
           li
             div.icon.google.maps
@@ -93,7 +93,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Городок-2*
+          span.badge.badge-success Городок-2
         ul
           li
             div.icon.google
@@ -101,7 +101,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Городок-3*
+          span.badge.badge-success Городок-3
         ul
           li
             div.icon.google
