--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Легкие-оплаты*
+          span.badge.badge-warning Легкие-оплаты
         ul
           li
             div.icon.portmone.com.ua
@@ -21,7 +21,7 @@ block content
             span.opisi Платежная система
       .group
         .group-title
-          span.badge.badge-success *ГАЗ*
+          span.badge.badge-success ГАЗ
         ul
           li
             div.icon.minfin.com.ua
@@ -45,7 +45,7 @@ block content
             span.opisi Поиск компании
       .group
         .group-title
-          span.badge.badge-success *Электроэнергия*
+          span.badge.badge-success Электроэнергия
         ul
           li
             div.icon.minfin.com.ua
@@ -65,7 +65,7 @@ block content
             span.opisi Кабин.Кир.обленерго
       .group
         .group-title
-          span.badge.badge-success *Вода*
+          span.badge.badge-success Вода
           
         ul
           li
@@ -74,7 +74,7 @@ block content
             span.opisi Цена.вода.Укр.
       .group
         .group-title
-          span.badge.badge-success *Отопление*
+          span.badge.badge-success Отопление
           
         ul
           li
@@ -84,7 +84,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Интернет-кабельний*
+          span.badge.badge-success Интернет-кабельний
         ul
           li
             div.icon.ukrtelecom.ua
@@ -112,7 +112,7 @@ block content
             span.opisi Shtorm
       .group
         .group-title
-          span.badge.badge-success *Интернет-мобильный*
+          span.badge.badge-success Интернет-мобильный
           
         ul
           li
@@ -153,7 +153,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *ИНФО от minfin.com.ua*
+          span.badge.badge-success ИНФО от minfin.com.ua
           
         ul
           li
@@ -170,7 +170,7 @@ block content
             a(href='https://index.minfin.com.ua/economy/index/inflation/', target='_blank') Индекс инфляции
       .group
         .group-title
-          span.badge.badge-success *ИНФО другое*
+          span.badge.badge-success ИНФО другое
           
         ul
           li
