--- a/includes/games.pug
+++ b/includes/games.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Азартные*
+          span.badge.badge-success Азартные
         ul
           li
             div.icon.playset.ru
@@ -29,7 +29,7 @@ block content
             a(href='http://www.min2win.ru/', target='_blank') min2win.ru
       .group
         .group-title
-          span.badge.badge-success *Логические*
+          span.badge.badge-success Логические
         ul
           li
             div.icon.zumagames.ru
@@ -42,7 +42,7 @@ block content
             a(href='http://2048game.com/ru/', target='_blank') 2048game.com
       .group
         .group-title
-          span.badge.badge-success *Для КОМПА*
+          span.badge.badge-success Для КОМПА
         ul
           li
             div.icon.wargaming.net
@@ -56,7 +56,7 @@ block content
             span.opisi нужен TORRENT
       .group
         .group-title
-          span.badge.badge-success *Инфо ТОП*
+          span.badge.badge-success Инфо ТОП
         ul
           li
             div.icon.onlimegames.ru
@@ -73,7 +73,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Онлайн для детей*
+          span.badge.badge-success Онлайн для детей
         ul
           li
             div.icon.poki.com
@@ -102,7 +102,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Букмекерская контора - СНГ*
+          span.badge.badge-success Букмекерская контора - СНГ
         ul
           li
             div.icon.fan-sport.com.ua
@@ -124,7 +124,7 @@ block content
             a(href='https://www.favbet.com/', target='_blank') favbet.com
       .group
         .group-title
-          span.badge.badge-success *Букмекерская контора - Европа*
+          span.badge.badge-success Букмекерская контора - Европа
         ul
           li
             div.icon.pinnacle.com
