--- a/includes/index.pug
+++ b/includes/index.pug
@@ -17,7 +17,8 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-dark *Поиск/Перевод/Граматика*
+          a(href='/others.html')
+            span.badge.badge-dark Поиск/Перевод/Граматика
         ul
           li
             div.google.icon
@@ -37,7 +38,8 @@ block content
             a(href='https://languagetool.org/uk/', target='_blank') Граматика от languagetool
       .group
         .group-title
-          span.badge.badge-dark *Социум*
+          a(href='/social.html')
+            span.badge.badge-dark Социум
         ul
           li
             div.icon.facebook.com
@@ -65,7 +67,8 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
       .group
         .group-title
-          span.badge.badge-dark *Новости*
+          a(href='/news.html')
+            span.badge.badge-dark Новости
         ul
           li
             div.icon.ukr.net
@@ -90,7 +93,8 @@ block content
             a(href='https://rada.gov.ua/', target='_blank') Верховная Рада Украины
       .group
         .group-title
-          span.badge.badge-dark *Медиа*
+          a(href='/media.html')
+            span.badge.badge-dark Медиа
         ul
           li
             div.icon.youtube
@@ -113,14 +117,18 @@ block content
           li
             div.icon.zaycev.fm
             a(href='https://www.zaycev.fm/', target='_blank') zaycev.fm
-          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
-          //- script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          li
+            // тут реклама от ГУГЛ
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+            ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
+            script.
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
     .col-sm
       .group
         .group-title
-          span.badge.badge-dark *Игры*
+          a(href='/games.html')
+            span.badge.badge-dark Игры
         ul
           li
             div.icon.playset.ru
@@ -142,7 +150,8 @@ block content
             a(href='http://vseigru.net/', target='_blank') vseigru.net
       .group
         .group-title
-          span.badge.badge-dark *Игры/Букмек.конторы*
+          a(href='/games.html')
+            span.badge.badge-dark Игры/Букмек.конторы
         ul
           li
             div.icon.fan-sport.com.ua
@@ -152,7 +161,8 @@ block content
             a(href='https://1xbetua.com/?bf=5c6ae4a19a325_515575637', target='_blank') 1xbetua.com`
       .group
         .group-title
-          span.badge.badge-dark *Комуналка*
+          a(href='/communal.html')
+            span.badge.badge-dark Комуналка
         ul
           li
             div.icon.minfin.com.ua
@@ -185,7 +195,8 @@ block content
             a(href='https://www.lifecell.ua/', target='_blank') lifecell.ua
       .group
         .group-title
-          span.badge.badge-dark *Банкинг*
+          a(href='/bank.html')
+            span.badge.badge-dark Банкинг
         ul
           li
             div.icon.privat24.ua
@@ -219,14 +230,18 @@ block content
             div.icon.bestchange.ru
             a(href='https://www.bestchange.ru/', target='_blank') bestchange.ru
             span.opisi Обмен валют
-          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
-          //- script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          li
+            // тут реклама от ГУГЛ
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+            ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
+            script.
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
     .col-sm
       .group
         .group-title
-          span.badge.badge-dark *Отследить посылку*
+          a(href='/market.html')
+            span.badge.badge-dark Отследить посылку
         ul
           li
             div.icon.novaposhta.ua
@@ -236,7 +251,8 @@ block content
             a(href='https://intime.ua/', target='_blank') intime.ua
       .group
         .group-title
-          span.badge.badge-dark *Рынок*
+          a(href='/market.html')
+            span.badge.badge-dark Рынок
         ul
           li
             div.icon.olx.ua
@@ -255,7 +271,8 @@ block content
             a(href='https://auto.ria.com/', target='_blank') auto.ria.com
       .group
         .group-title
-          span.badge.badge-dark *Магазины*
+          a(href='/shops.html')
+            span.badge.badge-dark Магазины
         ul
           li
             div.icon.letyshops.com
@@ -288,7 +305,8 @@ block content
             a(href='https://letyshops.com/r/apteka-911-4qh7st5ct08woo', target='_blank') apteka911.com.ua`
       .group
         .group-title
-          span.badge.badge-dark *Другое*
+          a(href='/others.html')
+            span.badge.badge-dark Другое
         ul
           li
             div.icon.speed2
@@ -317,14 +335,18 @@ block content
             div.icon.vshkole.com
             a(href='https://vshkole.com/', target='_blank') vshkole
             span.opisi ГДЗ/учебники
-          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
-          //- script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          li
+            // тут реклама от ГУГЛ
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+            ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
+            script.
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
     .col-sm
       .group
         .group-title
-          span.badge.badge-dark *Городок/Новомиргород*
+          a(href='/city.html')
+            span.badge.badge-dark Городок/Новомиргород
         ul
           li
             div.icon.google.maps
@@ -362,24 +384,28 @@ block content
             a(href='http://rada-novomirgorod.gov.ua/', target='_blank') Новом-ка міська рада
       .group
         .group-title
-          span.badge.badge-danger Обнова в закладках: v.2019-03-13
+          a(href='http://zakladki.at.ua/')
+            span.badge.badge-danger Обнова в закладках: v.2019-03-13
         ul
           li
             div.icon.florium.ua
             div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc', target='_blank') florium.ua`
-            div.icontooinfo.a0info-opis1(title='Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине.', alt='')
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине.', alt='')
           li
             div.icon.med-magazin.ua
             div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c', target='_blank') med-magazin.ua`
-            div.icontooinfo.a0info-opis6(title='Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
           li
             div.icon.master-plus.com.ua
             div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
-          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
-          //- script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          li
+            // тут реклама от ГУГЛ
+            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+            ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
+            script.
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
