--- a/includes/market.pug
+++ b/includes/market.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Отследить посылку (по почте)*
+          span.badge.badge-warning Отследить посылку (по почте)
         ul
           li
             div.icon.novaposhta.ua
@@ -29,7 +29,7 @@ block content
             a(href='https://www.meest-express.com.ua/ua/', target='_blank') meest-express.com.ua
       .group
         .group-title
-          span.badge.badge-warning *Безопасность-база мошенников*
+          span.badge.badge-warning Безопасность-база мошенников
         ul
           li
             div.icon.bazaukraferistov.com
@@ -52,7 +52,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Доска объявлений-ВСЯКОЕ*
+          span.badge.badge-success Доска объявлений-ВСЯКОЕ
         ul
           li
             div.icon.olx.ua
@@ -71,7 +71,7 @@ block content
             a(href='https://www.ria.com/', target='_blank') ria.com
       .group
         .group-title
-          span.badge.badge-success *Доска объявлений-ОДЕЖДА/ОБУВЬ*
+          span.badge.badge-success Доска объявлений-ОДЕЖДА/ОБУВЬ
         ul
           li
             div.icon.shafa.ua
@@ -81,7 +81,7 @@ block content
             a(href='https://www.kidstaff.com.ua/', target='_blank') kidstaff.com.ua
       .group
         .group-title
-          span.badge.badge-success *Доска объявлений-АВТО/МОТО*
+          span.badge.badge-success Доска объявлений-АВТО/МОТО
         ul
           li
             div.icon.auto.ria.com
@@ -92,7 +92,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Работа в Украине*
+          span.badge.badge-success Работа в Украине
         ul
           li
             div.icon.work.ua
@@ -102,7 +102,7 @@ block content
             a(href='https://rabota.ua/', target='_blank') rabota.ua
       .group
         .group-title
-          span.badge.badge-success *Торговые площадки*
+          span.badge.badge-success Торговые площадки
         ul
           li
             div.icon.prom.ua
@@ -112,7 +112,7 @@ block content
             a(href='https://bigl.ua/', target='_blank') bigl.ua
       .group
         .group-title
-          span.badge.badge-success *Аукционы*
+          span.badge.badge-success Аукционы
         ul
           li
             div.icon.skylots.org
