--- a/includes/media.pug
+++ b/includes/media.pug
@@ -13,14 +13,14 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Ваше любимое видео!*
+          span.badge.badge-success Ваше любимое видео!
         ul
           li
             div.icon.youtube
             a(href='https://www.youtube.com/', target='_blank') youtube.com
       .group
         .group-title
-          span.badge.badge-success *ТВ онлайн*
+          span.badge.badge-success ТВ онлайн
         ul
           li
             div.icon.viks.tv
@@ -36,7 +36,7 @@ block content
             a(href='http://usetv.pp.ua/tv/', target='_blank') usetv.pp.ua
       .group
         .group-title
-          span.badge.badge-success *Кинотеатры*
+          span.badge.badge-success Кинотеатры
         ul
           li
             div.icon.megogo.net
@@ -47,7 +47,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Все о Кино*
+          span.badge.badge-success Все о Кино
         ul
           li
             div.icon.kinopoisk.ru
@@ -55,7 +55,7 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
         .group
           .group-title
-            span.badge.badge-success *Сериалы онлайн*
+            span.badge.badge-success Сериалы онлайн
         ul
           li
             div.icon.seasonvar.ru
@@ -65,7 +65,7 @@ block content
             a(href='https://1serial.club/', target='_blank') 1serial.club
       .group
         .group-title
-          span.badge.badge-success *Фильмы онлайн*
+          span.badge.badge-success Фильмы онлайн
         ul
           li
             div.icon.kinokrad.co
@@ -88,7 +88,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Радио онлайн*
+          span.badge.badge-success Радио онлайн
         ul
           li
             div.icon.onlineradiobox.com
@@ -101,7 +101,7 @@ block content
             a(href='http://101.ru/', target='_blank') 101.ru
       .group
         .group-title
-          span.badge.badge-success *Музыка онлайн*
+          span.badge.badge-success Музыка онлайн
         ul
           li
             div.icon.zaycev.fm
@@ -130,7 +130,7 @@ block content
             i.fainfo.fab.fa-telegram
       .group
         .group-title
-          span.badge.badge-success *Музыка СКАЧАТЬ*
+          span.badge.badge-success Музыка СКАЧАТЬ
         ul
           li
             div.icon.xtremex3.com
