--- a/includes/news.pug
+++ b/includes/news.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Новости*
+          span.badge.badge-success Новости
         ul
           li
             div.icon.ukr.net
@@ -80,7 +80,7 @@ block content
             a(href='https://telegraf.com.ua/', target='_blank') telegraf.com.ua
       .group
         .group-title
-          span.badge.badge-success *Всякое*
+          span.badge.badge-success Всякое
         ul
           li
             div.icon.sis.at.ua
@@ -91,7 +91,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Новости спорта*
+          span.badge.badge-success Новости спорта
         ul
           li
             div.icon.myscore.com.ua
@@ -113,7 +113,7 @@ block content
             a(href='https://isport.ua/', target='_blank') isport.ua
       .group
         .group-title
-          span.badge.badge-success *Новости на Youtube*
+          span.badge.badge-success Новости на Youtube
         ul
           li
             div.icon.youtube
@@ -135,7 +135,7 @@ block content
             a(href='https://www.youtube.com/user/podrobnosti/videos', target='_blank') Youtube_Подробности
       .group
         .group-title
-          span.badge.badge-success *online-Новости на Youtube*
+          span.badge.badge-success online-Новости на Youtube
         ul
           li
             div.icon.youtube
@@ -167,7 +167,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Органы государственной власти Украины*
+          span.badge.badge-success Органы государственной власти Украины
         ul
           li
             div.icon.president.gov.ua
@@ -183,7 +183,7 @@ block content
             a(href='https://www.bank.gov.ua/', target='_blank') Національний банк України
       .group
         .group-title
-          span.badge.badge-success *Другие органы и министерства*
+          span.badge.badge-success Другие органы и министерства
         ul
           li
             div.icon.minagro.gov.ua
