--- a/includes/others.pug
+++ b/includes/others.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Анализатор ИНТЕРНЕТ соединения*
+          span.badge.badge-success Анализатор ИНТЕРНЕТ соединения
         ul
           li
             div.icon.speed1
@@ -35,7 +35,7 @@ block content
             a(href='https://2ip.ru/', target='_blank') 2ip.ru
       .group
         .group-title
-          span.badge.badge-success *Поисковики*
+          span.badge.badge-success Поисковики
         ul
           li
             div.icon.google
@@ -83,7 +83,7 @@ block content
             a(href='https://shukalka.com.ua/', target='_blank') Shukalka.com.ua
       .group
         .group-title
-          span.badge.badge-success *Переводчики*
+          span.badge.badge-success Переводчики
         ul
           li
             div.icon.translate.google.com.ua
@@ -93,7 +93,7 @@ block content
             a(href='https://www.translate.ru/', target='_blank') Переводчик PROMT
       .group
         .group-title
-          span.badge.badge-success *Граматика*
+          span.badge.badge-success Граматика
         ul
           li
             div.icon.languagetool.org
@@ -101,7 +101,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Торрент-программы*
+          span.badge.badge-warning Торрент-программы
         ul
           li
             div.icon.utorrent.com
@@ -111,7 +111,7 @@ block content
             a(href='http://www.acestream.org/', target='_blank') Скачать Acestream плеер
       .group
         .group-title
-          span.badge.badge-success *Торрент-трекеры*
+          span.badge.badge-success Торрент-трекеры
         ul
           li
             div.icon.rutracker.org
@@ -143,7 +143,7 @@ block content
             a(href='http://rutor.info/', target='_blank') rutor.info
       .group
         .group-title
-          span.badge.badge-success *Карты*
+          span.badge.badge-success Карты
         ul
           li
             div.icon.google.maps
@@ -157,7 +157,7 @@ block content
             a(href='https://maps.visicom.ua/', target='_blank') maps.visicom.ua
       .group
         .group-title
-          span.badge.badge-success *Интернет хранилище для ВАС (облако)*
+          span.badge.badge-success Интернет хранилище для ВАС (облако)
         ul
           li
             div.icon.mega.nz
@@ -174,7 +174,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Религия*
+          span.badge.badge-success Религия
         ul
           li
             div.icon.bibleonline.ru
@@ -196,7 +196,7 @@ block content
             a(href='http://slovo50.at.ua/', target='_blank') slovo50.at.ua
       .group
         .group-title
-          span.badge.badge-success *Всякое*
+          span.badge.badge-success Всякое
         ul
           li
             div.icon.wikipedia.org
