--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -12,9 +12,9 @@ block content
   .row.animated.fadeIn
     .col-sm
       .group
-        .group-title
+        .group-title.prog-title
           div.badge.badge-danger Пароль на архивы: zakladki2019
-          span.badge.badge-warning *Торрент-программы*
+          span.badge.badge-warning Торрент-программы
       ul
         li
           div.icon.utorrent.com
@@ -24,7 +24,7 @@ block content
           a(href='http://www.acestream.org/', target='_blank') Скачать Acestream плеер
       .group
         .group-title
-          span.badge.badge-warning *Загрузить мессенджеры*
+          span.badge.badge-warning Загрузить мессенджеры
       ul
         li
           div.icon.telegram
@@ -38,7 +38,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Удаленное управление компютером*
+          span.badge.badge-warning Удаленное управление компютером
       ul
         li
           div.icon.ammyy_admin
@@ -55,7 +55,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Для N.O.D.32 продление лицензии*
+          span.badge.badge-warning Для N.O.D.32 продление лицензии
       ul
         li
           div.icon.prog.tnod32
