--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Возврат % с покупок*
+          span.badge.badge-warning Возврат % с покупок
         ul
           li
             div.icon.letyshops.com
@@ -29,7 +29,7 @@ block content
             span.opisi Вам платят!
       .group
         .group-title
-          span.badge.badge-warning *Анализатор покупок*
+          span.badge.badge-warning Анализатор покупок
         ul
           li
             div.icon.hotline.ua
@@ -42,7 +42,7 @@ block content
             a(href='https://price.ua/', target='_blank') price.ua
       .group
         .group-title
-          span.badge.badge-warning *Отзывник покупок*
+          span.badge.badge-warning Отзывник покупок
         ul
           li
             div.icon.otzyvua.net
@@ -55,7 +55,7 @@ block content
             a(href='https://irecommend.ru/', target='_blank') irecommend.ru
       .group
         .group-title
-          span.badge.badge-warning *Помощник покупок ЗАРУБЕЖ*
+          span.badge.badge-warning Помощник покупок ЗАРУБЕЖ
         ul
           li
             div.icon.pokupayko.com
@@ -66,7 +66,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Зарубежные*
+          span.badge.badge-success Зарубежные
         ul
           li
             div.icon.best.aliexpress.com
@@ -76,7 +76,7 @@ block content
             a(href='https://letyshops.com/r/ebay-4qh7st5csx6og0', target='_blank') ebay.com`
       .group
         .group-title
-          span.badge.badge-success *Любые ТОВАРЫ!*
+          span.badge.badge-success Любые ТОВАРЫ!
         ul
           li
             div.icon.rozetka.com.ua
@@ -117,7 +117,7 @@ block content
             a(href='https://letyshops.com/r/kofeyok-ua-4qh7st5csy680o', target='_blank') coffeeok.com.ua`
       .group
         .group-title
-          span.badge.badge-success *Автотовары*
+          span.badge.badge-success Автотовары
         ul
           li
             div.icon.avtozvuk.ua
@@ -137,7 +137,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Одежда/Обувь/Аксессуары*
+          span.badge.badge-success Одежда/Обувь/Аксессуары
         ul
           li
             div.icon.bonprix.ua
@@ -156,7 +156,7 @@ block content
             a(href='https://letyshops.com/r/asos-4qh7st5csyw48o', target='_blank') asos.com`
       .group
         .group-title
-          span.badge.badge-success *Детские товары*
+          span.badge.badge-success Детские товары
         ul
           li
             div.icon.spok.ua
@@ -175,7 +175,7 @@ block content
             a(href='https://letyshops.com/r/berni-4qh7st5cszy8k4', target='_blank') berni.com.ua`
       .group
         .group-title
-          span.badge.badge-success *Косметика/Парфюмерия/Ювелир*
+          span.badge.badge-success Косметика/Парфюмерия/Ювелир
         ul
           li
             div.icon.yves-rocher.ua
@@ -207,7 +207,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Здоровье*
+          span.badge.badge-success Здоровье
         ul
           li
             div.icon.apteka911.com.ua
@@ -223,14 +223,14 @@ block content
             a(href='https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c', target='_blank') med-magazin.ua`
       .group
         .group-title
-          span.badge.badge-success *Сад/Огород*
+          span.badge.badge-success Сад/Огород
         ul
           li
             div.icon.florium.ua
             a(href='https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc', target='_blank') florium.ua`
       .group
         .group-title
-          span.badge.badge-success *Образование (изучение языков)*
+          span.badge.badge-success Образование (изучение языков)
         ul
           li
             div.icon.lingualeo.com
@@ -240,7 +240,7 @@ block content
             a(href='https://letyshops.com/r/englishdom-4qh7st5ct0u8cw', target='_blank') englishdom.com`
       .group
         .group-title
-          span.badge.badge-success *Книги*
+          span.badge.badge-success Книги
         ul
           li
             div.icon.yakaboo.ua
@@ -259,7 +259,7 @@ block content
             a(href='https://letyshops.com/r/book24-ua-4qh7st5ct08woo', target='_blank') book24.ua`
       .group
         .group-title
-          span.badge.badge-success *Путешествие/Отдых*
+          span.badge.badge-success Путешествие/Отдых
         ul
           li
             div.icon.aviasales.ru
