--- a/includes/social.pug
+++ b/includes/social.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning *Загрузить мессенджеры*
+          span.badge.badge-warning Загрузить мессенджеры
         ul
           li
             div.icon.telegram
@@ -25,17 +25,16 @@ block content
             div.icon.skype
             a(href='https://www.skype.com/ru/get-skype/', target='_blank') Скачать SKYPE
           li
+            // тут реклама от ГУГЛ - 3 колонки-вконце 336-280
             script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- 3 колонки-вконце 336*280++
-          li
             ins.adsbygoogle(style='display:inline-block;width:336px;height:280px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='7850904161')
-          li
             script.
               (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Социальные сети - Зарубеж*
+          span.badge.badge-success Социальные сети - Зарубеж
         ul
           li
             div.icon.facebook.com
@@ -54,7 +53,7 @@ block content
             a(href='https://www.livejournal.com/', target='_blank') Livejournal.com
       .group
         .group-title
-          span.badge.badge-success *Социальные сети - Россия*
+          span.badge.badge-success Социальные сети - Россия
         ul
           li
             div.icon.vk.com
@@ -66,7 +65,7 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
       .group
         .group-title
-          span.badge.badge-success *Социальные сети - Украина*
+          span.badge.badge-success Социальные сети - Украина
         ul
           li
             div.icon.ukrface.com.ua
@@ -87,17 +86,16 @@ block content
             div.icon.odnogrupniki.com.ua
             a(href='https://odnogrupniki.com.ua/reg32138', target='_blank') Odnogrupniki.com.ua`
           li
+            // тут реклама от ГУГЛ - 3 колонки 32050+
             script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- 3 колонки 320*50+
-          li
             ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='1111124042')
-          li
             script.
               (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
     .col-sm
       .group
         .group-title
-          span.badge.badge-success *Электронная почта - Зарубеж*
+          span.badge.badge-success Электронная почта - Зарубеж
         ul
           li
             div.icon.gmail
@@ -113,7 +111,7 @@ block content
             a(href='https://login.yahoo.com/', target='_blank') yahoo.com
       .group
         .group-title
-          span.badge.badge-success *Электронная почта - Россия*
+          span.badge.badge-success Электронная почта - Россия
         ul
           li
             div.icon.mail.yandex.ua
@@ -128,7 +126,7 @@ block content
             a(href='https://mail.rambler.ru/', target='_blank') mail.rambler.ru
       .group
         .group-title
-          span.badge.badge-success *Электронная почта - Украина*
+          span.badge.badge-success Электронная почта - Украина
         ul
           li
             div.icon.mail.ukr.net
@@ -151,11 +149,10 @@ block content
           li
             div.icon.mail.ex.ua
             a(href='https://mail.ex.ua/', target='_blank') mail.ex.ua
+            // тут реклама от ГУГЛ - 3 колонки 32050+
           li
             script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          //- 3 колонки 320*50+
-          li
             ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='1111124042')
-          li
             script.
               (adsbygoogle = window.adsbygoogle || []).push({});
+            // тут реклама от ГУГЛ
